force-app/main/default/objects/Contact/fields/Asian_American__c.field-meta.xml
<CustomField>
    <fullName>Asian_American__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>This contact has self-identified as noted.</inlineHelpText>
    <label>Asian American/Pacific Islander/Asian</label>
    <type>Checkbox</type>
</CustomField>