force-app/main/default/objects/Contact/fields/attend_9_10_11_day__c.field-meta.xml
<CustomField>
    <fullName>attend_9_10_11_day__c</fullName>
    <defaultValue>false</defaultValue>
    <label>attend 9.10.11 day</label>
    <type>Checkbox</type>
</CustomField>