force-app/main/default/objects/Contact/fields/attend_9_10_12_evening__c.field-meta.xml
<CustomField>
    <fullName>attend_9_10_12_evening__c</fullName>
    <defaultValue>false</defaultValue>
    <label>attend 9.10.12 evening</label>
    <type>Checkbox</type>
</CustomField>