force-app/main/default/objects/Contact/fields/attend_9_11_12_morning__c.field-meta.xml
<CustomField>
    <fullName>attend_9_11_12_morning__c</fullName>
    <defaultValue>false</defaultValue>
    <label>attend 9.11.12 morning</label>
    <type>Checkbox</type>
</CustomField>