force-app/main/default/objects/Contact/fields/Black_African_American_African__c.field-meta.xml
<CustomField>
    <fullName>Black_African_American_African__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>This contact has self-identified as noted.</inlineHelpText>
    <label>Black/African American/African</label>
    <type>Checkbox</type>
</CustomField>