force-app/main/default/objects/Contact/fields/Cheerful_Contact_ID__c.field-meta.xml
<CustomField>
    <fullName>Cheerful_Contact_ID__c</fullName>
    <label>Goodworld Contact ID</label>
    <length>50</length>
    <type>Text</type>
</CustomField>