force-app/main/default/objects/Contact/fields/CnP_PaaS__Id__c.field-meta.xml
<CustomField>
    <fullName>CnP_PaaS__Id__c</fullName>
    <label>C&amp;P Id</label>
    <length>25</length>
    <type>Text</type>
</CustomField>