force-app/main/default/objects/Contact/fields/CnP_PaaS__Other_Province__c.field-meta.xml
<CustomField>
    <fullName>CnP_PaaS__Other_Province__c</fullName>
    <label>C&amp;P Other Province</label>
    <length>100</length>
    <type>Text</type>
</CustomField>