force-app/main/default/objects/Contact/fields/Communication_Frequency__c.field-meta.xml
<CustomField>
    <fullName>Communication_Frequency__c</fullName>
    <label>Communication Frequency</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Annual Appeal Only</fullName>
            </value>
            <value>
                <fullName>Monthly</fullName>
            </value>
            <value>
                <fullName>Yearly</fullName>
            </value>
            <value>
                <fullName>Do Not Contact</fullName>
            </value>
            <value>
                <fullName>Daily</fullName>
                <isActive>false</isActive>
                <label>Daily</label>
            </value>
            <value>
                <fullName>Quarterly</fullName>
                <isActive>false</isActive>
                <label>Quarterly</label>
            </value>
            <value>
                <fullName>Weekly</fullName>
                <isActive>false</isActive>
                <label>Weekly</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>