force-app/main/default/objects/Contact/fields/Community_advocatepolicy_advocate__c.field-meta.xml
<CustomField>
    <fullName>Community_advocatepolicy_advocate__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Community advocate/policy advocate</label>
    <type>Checkbox</type>
</CustomField>