force-app/main/default/objects/Contact/fields/Contact_Type__c.field-meta.xml
<CustomField>
    <fullName>Contact_Type__c</fullName>
    <label>Contact Type</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Community advocate/policy advocate</fullName>
            </value>
            <value>
                <fullName>Donor</fullName>
            </value>
            <value>
                <fullName>Donor prospect</fullName>
            </value>
            <value>
                <fullName>Foundation Contact</fullName>
            </value>
            <value>
                <fullName>Legislative Staff</fullName>
            </value>
            <value>
                <fullName>Legislator</fullName>
            </value>
            <value>
                <fullName>Media</fullName>
            </value>
            <value>
                <fullName>Mike Berman Contact</fullName>
            </value>
            <value>
                <fullName>NDBN Board member</fullName>
            </value>
            <value>
                <fullName>NDBN Staff</fullName>
            </value>
            <value>
                <fullName>Research</fullName>
            </value>
            <value>
                <fullName>Past NDBN board member</fullName>
            </value>
            <value>
                <fullName>Diaper Manufacturer/Distributor</fullName>
            </value>
            <value>
                <fullName>Vendor</fullName>
            </value>
            <value>
                <fullName>Volunteer</fullName>
            </value>
            <value>
                <fullName>Information about diaper drives</fullName>
                <isActive>false</isActive>
                <label>Information about diaper drives</label>
            </value>
            <value>
                <fullName>Looking for diapers/agency</fullName>
                <isActive>false</isActive>
                <label>Looking for diapers/agency</label>
            </value>
            <value>
                <fullName>Looking for diapers/individual</fullName>
                <isActive>false</isActive>
                <label>Looking for diapers/individual</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>