force-app/main/default/objects/Contact/fields/Decline_to_Identify_Race_Ethnicity__c.field-meta.xml
<CustomField>
    <fullName>Decline_to_Identify_Race_Ethnicity__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Contact declined to indentify race or ethnicity</description>
    <inlineHelpText>This contact has self-identified as noted.</inlineHelpText>
    <label>Decline to Identify Race-Ethnicity</label>
    <type>Checkbox</type>
</CustomField>