force-app/main/default/objects/Contact/fields/Demographic_Data_Update_Date__c.field-meta.xml
<CustomField>
    <fullName>Demographic_Data_Update_Date__c</fullName>
    <inlineHelpText>Date of Demographic Data Update</inlineHelpText>
    <label>Demographic Data Update Date</label>
    <type>Date</type>
</CustomField>