force-app/main/default/objects/Contact/fields/Diaper_ManufacturerDistributor__c.field-meta.xml
<CustomField>
    <fullName>Diaper_ManufacturerDistributor__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Diaper Manufacturer/Distributor</label>
    <type>Checkbox</type>
</CustomField>