force-app/main/default/objects/Contact/fields/Different_identity__c.field-meta.xml
<CustomField>
    <fullName>Different_identity__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Person identifies as a Race or ethnicity not listed on survey</description>
    <inlineHelpText>This contact has self-identified as noted.</inlineHelpText>
    <label>Different identity</label>
    <type>Checkbox</type>
</CustomField>