force-app/main/default/objects/Contact/fields/Disability__c.field-meta.xml
<CustomField>
    <fullName>Disability__c</fullName>
    <inlineHelpText>This contact has self-identified as noted.</inlineHelpText>
    <label>Disability</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>I identify as a person with a disability</fullName>
            </value>
            <value>
                <fullName>I do not identify as a person with a disability</fullName>
            </value>
            <value>
                <fullName>Decline to state</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>