force-app/main/default/objects/Contact/fields/Do_Not_Mail__c.field-meta.xml
<CustomField>
    <fullName>Do_Not_Mail__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Check the box if the contact requested no mail or if the mailing address is incorrect.</description>
    <label>Do Not Mail</label>
    <type>Checkbox</type>
</CustomField>