force-app/main/default/objects/Contact/fields/Donor_prospect__c.field-meta.xml
<CustomField>
    <fullName>Donor_prospect__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Donor prospect</label>
    <type>Checkbox</type>
</CustomField>