force-app/main/default/objects/Contact/fields/DUPE_COMPAREc__c.field-meta.xml
<CustomField>
    <fullName>DUPE_COMPAREc__c</fullName>
    <externalId>true</externalId>
    <label>DUPE_COMPARE</label>
    <length>50</length>
    <type>Text</type>
</CustomField>