force-app/main/default/objects/Contact/fields/Email_Newsletter__c.field-meta.xml
<CustomField>
    <fullName>Email_Newsletter__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Email Newsletter</label>
    <type>Checkbox</type>
</CustomField>