force-app/main/default/objects/Contact/fields/Female__c.field-meta.xml
<CustomField>
    <fullName>Female__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>This contact self identified as noted on a demographic survey.</inlineHelpText>
    <label>Female</label>
    <type>Checkbox</type>
</CustomField>