force-app/main/default/objects/Contact/fields/Former_Board_Member__c.field-meta.xml
<CustomField>
    <fullName>Former_Board_Member__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Former Board Member</label>
    <type>Checkbox</type>
</CustomField>