force-app/main/default/objects/Contact/fields/Foundation_Contact__c.field-meta.xml
<CustomField>
    <fullName>Foundation_Contact__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Foundation Contact</label>
    <type>Checkbox</type>
</CustomField>