force-app/main/default/objects/Contact/fields/FunctionDLRS__c.field-meta.xml
<CustomField>
    <fullName>FunctionDLRS__c</fullName>
    <description>Hidden field used by DLRS to display Function from primary affiliation record to community users11/2021 MM</description>
    <inlineHelpText>This is the primary function performed by this contact</inlineHelpText>
    <label>Function</label>
    <length>255</length>
    <type>Text</type>
</CustomField>