force-app/main/default/objects/Contact/fields/Hispanic_Latinx__c.field-meta.xml
<CustomField>
    <fullName>Hispanic_Latinx__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>This contact has self-identified as noted.</inlineHelpText>
    <label>Hispanic/Latino/Latina/Latinx</label>
    <type>Checkbox</type>
</CustomField>