force-app/main/default/objects/Contact/fields/Lack_basic_needs__c.field-meta.xml
<CustomField>
    <fullName>Lack_basic_needs__c</fullName>
    <description>self-identify as a person who has experienced a lack of access to basic needs  (such as diapering, period, or incontinence supplies) either for yourself or as a parent or care provider</description>
    <inlineHelpText>This contact has self-identified as noted.</inlineHelpText>
    <label>Lack of access to basic needs</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>Decline to state</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>