force-app/main/default/objects/Contact/fields/Lead_Type_Hidden__c.field-meta.xml
<CustomField>
    <fullName>Lead_Type_Hidden__c</fullName>
    <description>This field is used to store the type of lead that was converted to crete the contact. The value is populated when the lead is converted, using the lead record type value</description>
    <label>Lead Type (Hidden)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>