force-app/main/default/objects/Contact/fields/Legislative_Staff__c.field-meta.xml
<CustomField>
    <fullName>Legislative_Staff__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Legislative Staff</label>
    <type>Checkbox</type>
</CustomField>