force-app/main/default/objects/Contact/fields/Legislator__c.field-meta.xml
<CustomField>
    <fullName>Legislator__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Legislator</label>
    <type>Checkbox</type>
</CustomField>