force-app/main/default/objects/Contact/fields/Lived_experience__c.field-meta.xml
<CustomField>
    <fullName>Lived_experience__c</fullName>
    <inlineHelpText>Do you publicly self-identify as a person who has experienced a lack of access to basic needs  (such as diapering, period, or incontinence supplies) either for yourself or as a parent or care provider?</inlineHelpText>
    <label>Lived experience</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>Decline to state</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>