force-app/main/default/objects/Contact/fields/Major_Donor__c.field-meta.xml
<CustomField>
    <fullName>Major_Donor__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Check if donor is a major donor to NDBN</description>
    <label>Major Donor</label>
    <type>Checkbox</type>
</CustomField>