force-app/main/default/objects/Contact/fields/Major_Donor_Prospect__c.field-meta.xml
<CustomField>
    <fullName>Major_Donor_Prospect__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Check if someone is a candidate to be a major donor</description>
    <label>Major Donor Prospect</label>
    <type>Checkbox</type>
</CustomField>