force-app/main/default/objects/Contact/fields/Male__c.field-meta.xml
<CustomField>
    <fullName>Male__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>This contact self identified as noted on a demographic survey.</inlineHelpText>
    <label>Male</label>
    <type>Checkbox</type>
</CustomField>