force-app/main/default/objects/Contact/fields/Media__c.field-meta.xml
<CustomField>
    <fullName>Media__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Media</label>
    <type>Checkbox</type>
</CustomField>