force-app/main/default/objects/Contact/fields/Member_Portal_Access__c.field-meta.xml
<CustomField>
    <fullName>Member_Portal_Access__c</fullName>
    <inlineHelpText>a manual field to track who has been invited and is able to get into Experience cloud member portal</inlineHelpText>
    <label>Member Portal Access</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Eligible</fullName>
            </value>
            <value>
                <fullName>Enabled-Invited</fullName>
            </value>
            <value>
                <fullName>Active Logged In</fullName>
            </value>
            <value>
                <fullName>Access Issue-Enable</fullName>
            </value>
            <value>
                <fullName>Access Issue-Login</fullName>
            </value>
            <value>
                <fullName>NA-uneligible</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>