force-app/main/default/objects/Contact/fields/Mike_Berman_Contact__c.field-meta.xml
<CustomField>
    <fullName>Mike_Berman_Contact__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Mike Berman Contact</label>
    <type>Checkbox</type>
</CustomField>