force-app/main/default/objects/Contact/fields/Multi_racial_Multi_ethnic__c.field-meta.xml
<CustomField>
    <fullName>Multi_racial_Multi_ethnic__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Identify as two or more races or ethnicities</description>
    <inlineHelpText>This contact has self-identified as noted.</inlineHelpText>
    <label>Multi-racial/Multi-ethnic</label>
    <type>Checkbox</type>
</CustomField>