force-app/main/default/objects/Contact/fields/Native_American_Indigenous__c.field-meta.xml
<CustomField>
    <fullName>Native_American_Indigenous__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>This contact has self-identified as noted.</inlineHelpText>
    <label>Native American/Amer Indian/Indigenous</label>
    <type>Checkbox</type>
</CustomField>