force-app/main/default/objects/Contact/fields/Native_Hawaiian_or_Pacific_Islander__c.field-meta.xml
<CustomField>
    <fullName>Native_Hawaiian_or_Pacific_Islander__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>This contact has self-identified as noted.</inlineHelpText>
    <label>Native Hawaiian or Pacific Islander</label>
    <type>Checkbox</type>
</CustomField>