force-app/main/default/objects/Contact/fields/NDBN_Board_Member__c.field-meta.xml
<CustomField>
    <fullName>NDBN_Board_Member__c</fullName>
    <defaultValue>false</defaultValue>
    <label>NDBN Board Member</label>
    <type>Checkbox</type>
</CustomField>