force-app/main/default/objects/Contact/fields/NDBN_Staff__c.field-meta.xml
<CustomField>
    <fullName>NDBN_Staff__c</fullName>
    <defaultValue>false</defaultValue>
    <label>NDBN Staff</label>
    <type>Checkbox</type>
</CustomField>