force-app/main/default/objects/Contact/fields/Network_Role_Aff__c.field-meta.xml
<CustomField>
    <fullName>Network_Role_Aff__c</fullName>
    <description>Hidden field used by DLRS to display Network Role from primary affiliation record to community users11/2021 MM</description>
    <label>Network Role</label>
    <length>255</length>
    <type>Text</type>
</CustomField>