force-app/main/default/objects/Contact/fields/Not_Listed__c.field-meta.xml
<CustomField>
    <fullName>Not_Listed__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Identifies with a Race or ethnicity not listed</description>
    <inlineHelpText>This contact has self-identified as noted.</inlineHelpText>
    <label>Other Race or Ethnicity</label>
    <type>Checkbox</type>
</CustomField>