force-app/main/default/objects/Contact/fields/npe01__Primary_Address_Type__c.field-meta.xml
<CustomField>
    <fullName>npe01__Primary_Address_Type__c</fullName>
    <description>Which type of address is the mailing address?</description>
    <label>Primary Address Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Work</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>