force-app/main/default/objects/Contact/fields/npsp__Deceased__c.field-meta.xml
<CustomField>
    <fullName>npsp__Deceased__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates the Contact is deceased. When selected, NPSP excludes this Contact from Household Naming (unless this Contact is the only one in the Household) and from standard email and phone lists.</description>
    <inlineHelpText>When selected, this option marks the contact as deceased, and excludes them from household naming, emails, and phone calls.</inlineHelpText>
    <label>Deceased</label>
    <type>Checkbox</type>
</CustomField>