force-app/main/default/objects/Contact/fields/npsp__Do_Not_Contact__c.field-meta.xml
<CustomField>
    <fullName>npsp__Do_Not_Contact__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates the Contact does not want your organization to call or email. Use this field to filter out Contacts in email and phone lists. When selected, NPSP excludes this Contact from Opportunity Acknowledgements.</description>
    <inlineHelpText>When selected, this option excludes the contact from emails and phone calls.</inlineHelpText>
    <label>Do Not Contact</label>
    <type>Checkbox</type>
</CustomField>